--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
     <footer>
       <div class="wrap">
         <p>
-          <span class="alignright"><a href="http://netflix.com" title="NBS Bank - ICT Department"><img src="./static/images/logos/nbs_logo.png" alt="Netflix"></a></span>
+          <span class="alignright"><a href="https://nbs.mw/" title="NBS Bank - ICT Department"><img src="./static/images/logos/nbs_logo.png" alt="NBS Bank"></a></span>
         </p>
       </div>
     </footer>
