--- a/index.html
+++ b/index.html
@@ -158,6 +158,11 @@
                   <td>Welcome remarks</td>
                   <td>Chinga</td>
                 </tr>
+                <tr>
+                  <td></td>
+                  <td>COO Address</td>
+                  <td>COO</td>
+                </tr>
               </tbody>
              </table>
           </div>
