--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
           <!--.wrap = container (width: 90%) -->
           <div class="wrap aligncenter">
             <h1>
-              <strong>ICT Strategy Session</strong>
+              <strong>ICT 2024 STRATEGY MEETING – GAME HAVEN</strong>
             </h1>
             <p class="text-symbols">* * * </p>
             <p><a class="button ghost" href="https://webslides.tv" title="Download WebSlides for free">
@@ -136,7 +136,7 @@
               <svg class="fa-info-circle large">
                 <use xlink:href="#fa-info-circle"></use>
               </svg>
-              <strong>ICT 2024 STRATEGY MEETING – GAME HAVEN</strong>
+              <strong>PROGRAM</strong>
             </h2>
              <hr>
              <table>
@@ -162,6 +162,26 @@
                   <td></td>
                   <td>COO Address</td>
                   <td>COO</td>
+                </tr>
+                <tr>
+                  <td>9:15 - 9:30</td>
+                  <td>Key Note Address –</td>
+                  <td>Clarance</td>
+                </tr>
+                <tr>
+                  <td>9:35 - 10:00</td>
+                  <td>Strategy Review – 2022-2026 – Adrian</td>
+                  <td>Adrian</td>
+                </tr>
+                <tr>
+                  <td>10:05 - 10:20</td>
+                  <td>Group CIO insights </td>
+                  <td>Clarance</td>
+                </tr>
+                <tr>
+                  <td>10:25 - 10:45</td>
+                  <td>Break</td>
+                  <td></td>
                 </tr>
               </tbody>
              </table>
