--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
           <!--.wrap = container (width: 90%) -->
           <div class="wrap aligncenter">
             <h1>
-              <strong>ICT 2024 STRATEGY MEETING - GAME HAVEN</strong>
+              <strong>ICT 2024 STRATEGY MEETING</strong>
             </h1>
             <p class="text-symbols">* * * </p>
             <p><a class="button ghost" href="https://webslides.tv" title="Download WebSlides for free">
