--- a/index.html
+++ b/index.html
@@ -173,6 +173,30 @@
                   <td>Strategy Review – 2022-2026 – Adrian</td>
                   <td>Adrian</td>
                 </tr>
+              </tbody>
+             </table>
+          </div>
+          <!-- .end .wrap -->
+        </section>
+
+        <section>
+          <div class="wrap size-50 bg-white">
+            <h2>
+              <svg class="fa-info-circle large">
+                <use xlink:href="#fa-info-circle"></use>
+              </svg>
+              <strong>PROGRAM cont.</strong>
+            </h2>
+             <hr>
+             <table>
+              <thead>
+                <tr>
+                  <th>Time</th>
+                  <th>Activity</th>
+                  <th>Facilitator</th>
+                </tr>
+              </thead>
+              <tbody>
                 <tr>
                   <td>10:05 - 10:20</td>
                   <td>Group CIO insights </td>
