--- a/index.html
+++ b/index.html
@@ -207,6 +207,16 @@
                   <td>Break</td>
                   <td></td>
                 </tr>
+                <tr>
+                  <td>10:50 - 11:05</td>
+                  <td>Overall 2024 Strategy Highlights </td>
+                  <td>Harold/Chinga</td>
+                </tr>
+                <tr>
+                  <td>10:50 - 11:05</td>
+                  <td>Energizer </td>
+                  <td>Francis </td>
+                </tr>
               </tbody>
              </table>
           </div>
