added all programs

--- a/index.html
+++ b/index.html
@@ -223,6 +223,99 @@
           <!-- .end .wrap -->
         </section>
 
+        <section>
+          <div class="wrap size-50 bg-white">
+            <h2>
+              <svg class="fa-info-circle large">
+                <use xlink:href="#fa-info-circle"></use>
+              </svg>
+              <strong>PROGRAM cont.</strong>
+            </h2>
+             <hr>
+             <table>
+              <thead>
+                <tr>
+                  <th>Time</th>
+                  <th>Activity</th>
+                  <th>Facilitator</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <td>11:10 - 12:30</td>
+                  <td>Business Units Strategy Insights </td>
+                  <td>Business Units</td>
+                </tr>
+                <tr>
+                  <td>12:30 - 13:30</td>
+                  <td>Lunch</td>
+                  <td></td>
+                </tr>
+                <tr>
+                  <td>13:45 - 14:00</td>
+                  <td>SWOT Review -</td>
+                  <td>Elizabeth</td>
+                </tr>
+                <tr>
+                  <td>14:05 - 14:30</td>
+                  <td>ICT 2024 Initiatives</td>
+                  <td>Francis </td>
+                </tr>
+              </tbody>
+             </table>
+          </div>
+          <!-- .end .wrap -->
+        </section>
+
+        <section>
+          <div class="wrap size-50 bg-white">
+            <h2>
+              <svg class="fa-info-circle large">
+                <use xlink:href="#fa-info-circle"></use>
+              </svg>
+              <strong>PROGRAM cont.</strong>
+            </h2>
+             <hr>
+             <table>
+              <thead>
+                <tr>
+                  <th>Time</th>
+                  <th>Activity</th>
+                  <th>Facilitator</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <td>14:05 - 14:30</td>
+                  <td>Energizer</td>
+                  <td>Mphatso</td>
+                </tr>
+                <tr>
+                  <td>14:35 - 15:10</td>
+                  <td>Break Away session- Prioritisation and socialisation of initiatives</td>
+                  <td>Blessings</td>
+                </tr>
+                <tr>
+                  <td>15:15 - 15:30</td>
+                  <td>Closing remarks</td>
+                  <td>Chinga</td>
+                </tr>
+                <tr>
+                  <td>15:30</td>
+                  <td>Tea Break</td>
+                  <td> </td>
+                </tr>
+                <tr>
+                  <td>16:00 - 17:00</td>
+                  <td>Consolidation</td>
+                  <td>ICT Manco</td>
+                </tr>
+              </tbody>
+             </table>
+          </div>
+          <!-- .end .wrap -->
+        </section>
+
       </article>
     </main>
     <!--main-->
