--- a/index.html
+++ b/index.html
@@ -181,6 +181,7 @@
         </section>
 
         <section>
+          <span class="background dark" style="background-image:url('./static/images/logos/i1.jpeg')"></span>
           <div class="wrap size-50 bg-white">
             <h2>
               <svg class="fa-info-circle large">
@@ -225,6 +226,7 @@
         </section>
 
         <section>
+          <span class="background dark" style="background-image:url('./static/images/logos/i1.jpeg')"></span>
           <div class="wrap size-50 bg-white">
             <h2>
               <svg class="fa-info-circle large">
@@ -269,6 +271,7 @@
         </section>
 
         <section>
+          <span class="background dark" style="background-image:url('./static/images/logos/i1.jpeg')"></span>
           <div class="wrap size-50 bg-white">
             <h2>
               <svg class="fa-info-circle large">
