--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
         </section>
         
         <section>
-          <span class="background dark" style="background-image:url('./static/images/logos/i1.jpeg')"></span>
+          <span class="background dark" style="background-image:url('./static/images/logos/i1.jpg')"></span>
           <div class="wrap size-50 bg-white">
             <h2>
               <svg class="fa-info-circle large">
@@ -181,7 +181,7 @@
         </section>
 
         <section>
-          <span class="background dark" style="background-image:url('./static/images/logos/i1.jpeg')"></span>
+          <span class="background dark" style="background-image:url('./static/images/logos/i1.jpg')"></span>
           <div class="wrap size-50 bg-white">
             <h2>
               <svg class="fa-info-circle large">
@@ -226,7 +226,7 @@
         </section>
 
         <section>
-          <span class="background dark" style="background-image:url('./static/images/logos/i1.jpeg')"></span>
+          <span class="background dark" style="background-image:url('./static/images/logos/i1.jpg')"></span>
           <div class="wrap size-50 bg-white">
             <h2>
               <svg class="fa-info-circle large">
@@ -271,7 +271,7 @@
         </section>
 
         <section>
-          <span class="background dark" style="background-image:url('./static/images/logos/i1.jpeg')"></span>
+          <span class="background dark" style="background-image:url('./static/images/logos/i1.jpg')"></span>
           <div class="wrap size-50 bg-white">
             <h2>
               <svg class="fa-info-circle large">
