--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     -->
 
     <!-- SEO -->
-    <title>ICT 2024 STRATEGY MEETING &middot; - Powered by WebSlides</title>
+    <title>ICT 2024 STRATEGY MEETING</title>
     <meta name="description" content="A sample demo app using Web slides">
 
     <!-- URL CANONICAL -->
