--- a/index.html
+++ b/index.html
@@ -81,18 +81,18 @@
   <body>
     <header role="banner">
       <nav role="navigation">
-        <p class="logo"><a href="#" title="NBS">NBS Bank</a></p>
+        <p class="logo_2"><a href="#" title="NBS">NBS Bank</a></p>
         <ul>
           <li class="github">
-            <a rel="external" href="#" title="Github">
-              <svg class="fa-github">
+            <a rel="external" href="https://www.facebook.com/nbs.malawi/" title="Facebook">
+              <svg class="fa-facebook">
                 <use xlink:href="#fa-github"></use>
               </svg>
               <em>NBS Bank</em>
             </a>
           </li>
           <li class="twitter">
-            <a rel="external" href="#" title="Twitter">
+            <a rel="external" href="https://twitter.com/nbsbankmw" title="Twitter">
               <svg class="fa-twitter">
                 <use xlink:href="#fa-twitter"></use>
               </svg>
