--- a/index.html
+++ b/index.html
@@ -4,22 +4,12 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <!-- CLEAN MARKUP = GOOD KARMA.
-      Hi source code lover,
-
-      you're a curious person and a fast learner ;)
-      Let's make something beautiful together. Contribute on Github:
-      https://github.com/webslides/webslides
-
-      Thanks!
-    -->
-
     <!-- SEO -->
     <title>ICT 2024 STRATEGY MEETING</title>
     <meta name="description" content="ICT 2024 STRATEGY MEETING - GAME HAVEN">
 
     <!-- URL CANONICAL -->
-    <!-- <link rel="canonical" href="http://your-url.com/permalink"> -->
+    <link rel="canonical" href="https://nbs.mw/">
 
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,700,700i%7CMaitree:200,300,400,600,700&amp;subset=latin-ext" rel="stylesheet">
