--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
              <table>
               <thead>
                 <tr>
-                  <th>Time</th>
+                  <th class="table_style">Time</th>
                   <th>Activity</th>
                   <th>Facilitator</th>
                 </tr>
