--- a/index.html
+++ b/index.html
@@ -133,9 +133,9 @@
              <table>
               <thead>
                 <tr>
-                  <th>Time</th>
-                  <th>Activity</th>
-                  <th>Facilitator</th>
+                  <th class="table_style">Time</th>
+                  <th class="table_style">Activity</th>
+                  <th class="table_style">Facilitator</th>
                 </tr>
               </thead>
               <tbody>
@@ -183,9 +183,9 @@
              <table>
               <thead>
                 <tr>
-                  <th>Time</th>
-                  <th>Activity</th>
-                  <th>Facilitator</th>
+                  <th class="table_style">Time</th>
+                  <th class="table_style">Activity</th>
+                  <th class="table_style">Facilitator</th>
                 </tr>
               </thead>
               <tbody>
@@ -228,9 +228,9 @@
              <table>
               <thead>
                 <tr>
-                  <th>Time</th>
-                  <th>Activity</th>
-                  <th>Facilitator</th>
+                  <th class="table_style">Time</th>
+                  <th class="table_style">Activity</th>
+                  <th class="table_style">Facilitator</th>
                 </tr>
               </thead>
               <tbody>
@@ -273,9 +273,9 @@
              <table>
               <thead>
                 <tr>
-                  <th>Time</th>
-                  <th>Activity</th>
-                  <th>Facilitator</th>
+                  <th class="table_style">Time</th>
+                  <th class="table_style">Activity</th>
+                  <th class="table_style">Facilitator</th>
                 </tr>
               </thead>
               <tbody>
