--- a/index.html
+++ b/index.html
@@ -141,20 +141,20 @@
               <tbody>
                 <tr>
                   <td>8:30 - 8:45</td>
-                  <td>Arrival</td>
+                  <td>Team Arrival</td>
                   <td></td>
                 </tr>
-                <tr>
+                <tr class="faint_red">
                   <td>9:00 - 9:10</td>
-                  <td>Welcome remarks</td>
+                  <td>Welcome Remarks</td>
                   <td>Chinga</td>
                 </tr>
                 <tr>
                   <td></td>
                   <td>COO Address</td>
-                  <td>COO</td>
+                  <td>Shadreck</td>
                 </tr>
-                <tr>
+                <tr  class="faint_red">
                   <td>9:15 - 9:30</td>
                   <td>Key Note Address –</td>
                   <td>Clarance</td>
@@ -194,7 +194,7 @@
                   <td>Group CIO insights </td>
                   <td>Clarance</td>
                 </tr>
-                <tr>
+                <tr class="faint_red">
                   <td>10:25 - 10:45</td>
                   <td>Break</td>
                   <td></td>
@@ -204,7 +204,7 @@
                   <td>Overall 2024 Strategy Highlights </td>
                   <td>Harold/Chinga</td>
                 </tr>
-                <tr>
+                <tr class="faint_red">
                   <td>10:50 - 11:05</td>
                   <td>Energizer </td>
                   <td>Francis </td>
@@ -239,7 +239,7 @@
                   <td>Business Units Strategy Insights </td>
                   <td>Business Units</td>
                 </tr>
-                <tr>
+                <tr class="faint_red">
                   <td>12:30 - 13:30</td>
                   <td>Lunch</td>
                   <td></td>
@@ -249,7 +249,7 @@
                   <td>SWOT Review -</td>
                   <td>Elizabeth</td>
                 </tr>
-                <tr>
+                <tr class="faint_red">
                   <td>14:05 - 14:30</td>
                   <td>ICT 2024 Initiatives</td>
                   <td>Francis </td>
@@ -284,7 +284,7 @@
                   <td>Energizer</td>
                   <td>Mphatso</td>
                 </tr>
-                <tr>
+                <tr class="faint_red">
                   <td>14:35 - 15:10</td>
                   <td>Break Away session- Prioritisation and socialisation of initiatives</td>
                   <td>Blessings</td>
@@ -294,7 +294,7 @@
                   <td>Closing remarks</td>
                   <td>Chinga</td>
                 </tr>
-                <tr>
+                <tr class="faint_red">
                   <td>15:30</td>
                   <td>Tea Break</td>
                   <td> </td>
