making the table responsive

--- a/index.html
+++ b/index.html
@@ -130,42 +130,44 @@
               <strong>PROGRAM</strong>
             </h2>
              <hr>
-             <table>
-              <thead>
-                <tr>
-                  <th class="table_style">Time</th>
-                  <th class="table_style">Activity</th>
-                  <th class="table_style">Facilitator</th>
-                </tr>
-              </thead>
-              <tbody>
-                <tr>
-                  <td>8:30 - 8:45</td>
-                  <td>Team Arrival</td>
-                  <td></td>
-                </tr>
-                <tr class="faint_red">
-                  <td>9:00 - 9:10</td>
-                  <td>Welcome Remarks</td>
-                  <td>Chinga</td>
-                </tr>
-                <tr>
-                  <td></td>
-                  <td>COO Address</td>
-                  <td>Shadreck</td>
-                </tr>
-                <tr  class="faint_red">
-                  <td>9:15 - 9:30</td>
-                  <td>Key Note Address –</td>
-                  <td>Clarance</td>
-                </tr>
-                <tr>
-                  <td>9:35 - 10:00</td>
-                  <td>Strategy Review – 2022-2026 – Adrian</td>
-                  <td>Adrian</td>
-                </tr>
-              </tbody>
-             </table>
+             <div style="overflow-x:scroll;">
+              <table>
+                <thead>
+                  <tr>
+                    <th class="table_style">Time</th>
+                    <th class="table_style">Activity</th>
+                    <th class="table_style">Facilitator</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr>
+                    <td>8:30 - 8:45</td>
+                    <td>Team Arrival</td>
+                    <td></td>
+                  </tr>
+                  <tr class="faint_red">
+                    <td>9:00 - 9:10</td>
+                    <td>Welcome Remarks</td>
+                    <td>Chinga</td>
+                  </tr>
+                  <tr>
+                    <td></td>
+                    <td>COO Address</td>
+                    <td>Shadreck</td>
+                  </tr>
+                  <tr  class="faint_red">
+                    <td>9:15 - 9:30</td>
+                    <td>Key Note Address –</td>
+                    <td>Clarance</td>
+                  </tr>
+                  <tr>
+                    <td>9:35 - 10:00</td>
+                    <td>Strategy Review – 2022-2026 – Adrian</td>
+                    <td>Adrian</td>
+                  </tr>
+                </tbody>
+               </table>
+             </div>
           </div>
           <!-- .end .wrap -->
         </section>
@@ -180,6 +182,7 @@
               <strong>PROGRAM cont.</strong>
             </h2>
              <hr>
+             <div style="overflow-x:scroll;">
              <table>
               <thead>
                 <tr>
@@ -211,6 +214,7 @@
                 </tr>
               </tbody>
              </table>
+             </div>
           </div>
           <!-- .end .wrap -->
         </section>
@@ -225,37 +229,39 @@
               <strong>PROGRAM cont.</strong>
             </h2>
              <hr>
-             <table>
-              <thead>
-                <tr>
-                  <th class="table_style">Time</th>
-                  <th class="table_style">Activity</th>
-                  <th class="table_style">Facilitator</th>
-                </tr>
-              </thead>
-              <tbody>
-                <tr>
-                  <td>11:10 - 12:30</td>
-                  <td>Business Units Strategy Insights </td>
-                  <td>Business Units</td>
-                </tr>
-                <tr class="faint_red">
-                  <td>12:30 - 13:30</td>
-                  <td>Lunch</td>
-                  <td></td>
-                </tr>
-                <tr>
-                  <td>13:45 - 14:00</td>
-                  <td>SWOT Review -</td>
-                  <td>Elizabeth</td>
-                </tr>
-                <tr class="faint_red">
-                  <td>14:05 - 14:30</td>
-                  <td>ICT 2024 Initiatives</td>
-                  <td>Francis </td>
-                </tr>
-              </tbody>
-             </table>
+             <div style="overflow-x:scroll;">
+              <table>
+                <thead>
+                  <tr>
+                    <th class="table_style">Time</th>
+                    <th class="table_style">Activity</th>
+                    <th class="table_style">Facilitator</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr>
+                    <td>11:10 - 12:30</td>
+                    <td>Business Units Strategy Insights </td>
+                    <td>Business Units</td>
+                  </tr>
+                  <tr class="faint_red">
+                    <td>12:30 - 13:30</td>
+                    <td>Lunch</td>
+                    <td></td>
+                  </tr>
+                  <tr>
+                    <td>13:45 - 14:00</td>
+                    <td>SWOT Review -</td>
+                    <td>Elizabeth</td>
+                  </tr>
+                  <tr class="faint_red">
+                    <td>14:05 - 14:30</td>
+                    <td>ICT 2024 Initiatives</td>
+                    <td>Francis </td>
+                  </tr>
+                </tbody>
+               </table>
+             </div>
           </div>
           <!-- .end .wrap -->
         </section>
@@ -270,7 +276,8 @@
               <strong>PROGRAM cont.</strong>
             </h2>
              <hr>
-             <table>
+             <div style="overflow-x:scroll;">
+             <table class="table_hider">
               <thead>
                 <tr>
                   <th class="table_style">Time</th>
@@ -306,6 +313,7 @@
                 </tr>
               </tbody>
              </table>
+             </div>
           </div>
           <!-- .end .wrap -->
         </section>
