--- a/index.html
+++ b/index.html
@@ -193,24 +193,24 @@
               </thead>
               <tbody>
                 <tr>
-                  <td>10:05 - 10:20</td>
-                  <td>Group CIO insights </td>
-                  <td>Clarance</td>
+                  <td>13:51 - 14:00</td>
+                  <td>Energizer</td>
+                  <td>Francis</td>
                 </tr>
                 <tr class="faint_red">
-                  <td>10:25 - 10:45</td>
-                  <td>Break</td>
-                  <td></td>
+                  <td>14:00 - 14:15</td>
+                  <td>Overall 2024 Bank's Strategy Highlights</td>
+                  <td>Harold</td>
                 </tr>
                 <tr>
-                  <td>10:50 - 11:05</td>
-                  <td>Overall 2024 Strategy Highlights </td>
-                  <td>Harold/Chinga</td>
+                  <td>14:20 - 14:25</td>
+                  <td>Energizer </td>
+                  <td>Mphatso </td>
                 </tr>
                 <tr class="faint_red">
-                  <td>10:50 - 11:05</td>
-                  <td>Energizer </td>
-                  <td>Francis </td>
+                  <td>14:25 - 14:40</td>
+                  <td>ICT SWOT Review</td>
+                  <td>Elizabeth</td>
                 </tr>
               </tbody>
              </table>
@@ -219,6 +219,7 @@
           <!-- .end .wrap -->
         </section>
 
+       
         <section>
           <span class="background dark" style="background-image:url('./static/images/logos/i1.jpg')"></span>
           <div class="wrap size-50 bg-white">
@@ -230,54 +231,7 @@
             </h2>
              <hr>
              <div style="overflow-x:scroll;">
-              <table>
-                <thead>
-                  <tr>
-                    <th class="table_style">Time</th>
-                    <th class="table_style">Activity</th>
-                    <th class="table_style">Facilitator</th>
-                  </tr>
-                </thead>
-                <tbody>
-                  <tr>
-                    <td>11:10 - 12:30</td>
-                    <td>Business Units Strategy Insights </td>
-                    <td>Business Units</td>
-                  </tr>
-                  <tr class="faint_red">
-                    <td>12:30 - 13:30</td>
-                    <td>Lunch</td>
-                    <td></td>
-                  </tr>
-                  <tr>
-                    <td>13:45 - 14:00</td>
-                    <td>SWOT Review -</td>
-                    <td>Elizabeth</td>
-                  </tr>
-                  <tr class="faint_red">
-                    <td>14:05 - 14:30</td>
-                    <td>ICT 2024 Initiatives</td>
-                    <td>Francis </td>
-                  </tr>
-                </tbody>
-               </table>
-             </div>
-          </div>
-          <!-- .end .wrap -->
-        </section>
-
-        <section>
-          <span class="background dark" style="background-image:url('./static/images/logos/i1.jpg')"></span>
-          <div class="wrap size-50 bg-white">
-            <h2>
-              <svg class="fa-info-circle large">
-                <use xlink:href="#fa-info-circle"></use>
-              </svg>
-              <strong>PROGRAM cont.</strong>
-            </h2>
-             <hr>
-             <div style="overflow-x:scroll;">
-             <table class="table_hider">
+             <table>
               <thead>
                 <tr>
                   <th class="table_style">Time</th>
@@ -286,30 +240,20 @@
                 </tr>
               </thead>
               <tbody>
-                <tr>
-                  <td>14:05 - 14:30</td>
+                <tr class="faint_red">
+                  <td>14:40 - 14:45</td>
                   <td>Energizer</td>
-                  <td>Mphatso</td>
-                </tr>
-                <tr class="faint_red">
-                  <td>14:35 - 15:10</td>
-                  <td>Break Away session- Prioritisation and socialisation of initiatives</td>
-                  <td>Blessings</td>
+                  <td>Mercy</td>
                 </tr>
                 <tr>
+                  <td>14:45 - 15:15</td>
+                  <td>ICT 2024 Initiatives</td>
+                  <td>Cyril</td>
+                </tr>
+                <tr class="faint_red">
                   <td>15:15 - 15:30</td>
-                  <td>Closing remarks</td>
-                  <td>Chinga</td>
-                </tr>
-                <tr class="faint_red">
-                  <td>15:30</td>
-                  <td>Tea Break</td>
-                  <td> </td>
-                </tr>
-                <tr>
-                  <td>16:00 - 17:00</td>
-                  <td>Consolidation</td>
-                  <td>ICT Manco</td>
+                  <td>Closing remarks </td>
+                  <td></td>
                 </tr>
               </tbody>
              </table>
@@ -317,6 +261,7 @@
           </div>
           <!-- .end .wrap -->
         </section>
+        
       </article>
     </main>
     <!--main-->
